src/styles/globals.css
@import 'tailwindcss';

@config '../../tailwind.config.js';

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

@layer utilities {
  body {
    font-family: 'Main';
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    user-select: none;
    height: 100dvh;
    overflow: auto;
    touch-action: pan-x pan-y;
  }

  /* latin */
  @font-face {
    font-family: 'Main';
    src: url('./fonts/Azeret_Mono/AzeretMono-VariableFont_wght.ttf')
      format('truetype');
    unicode-range: U+0000-007F, U+0080-00FF;
  }

  /* cyrillic */
  @font-face {
    font-family: 'Main';
    src: url('./fonts/ubuntu-mono/UbuntuMono-Regular.ttf') format('truetype');
    unicode-range: U+0400-04FF, U+0500-052F, U+2DE0-2DFF, U+A640-A69F;
    size-adjust: 115%;
  }
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 20 14.3% 4.1%;

    --muted: 60 4.8% 95.9%;
    --muted-foreground: 25 5.3% 44.7%;

    --popover: 0 0% 100%;
    --popover-foreground: 20 14.3% 4.1%;

    --card: 0 0% 100%;
    --card-foreground: 20 14.3% 4.1%;

    --border: 20 5.9% 90%;
    --input: 20 5.9% 90%;

    --primary: 24 9.8% 10%;
    --primary-foreground: 60 9.1% 97.8%;

    --secondary: 60 4.8% 95.9%;
    --secondary-foreground: 24 9.8% 10%;

    --accent: 60 4.8% 95.9%;
    --accent-foreground: 24 9.8% 10%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 60 9.1% 97.8%;

    --ring: 24 5.4% 63.9%;

    --radius: 0.5rem;

    --spacing-ratio: 1;

    @media screen and (min-width: 768px) {
      --spacing-ratio: 1.5;
    }
  }

  .dark {
    --background: 20 14.3% 4.1%;
    --foreground: 60 9.1% 97.8%;

    --muted: 12 6.5% 15.1%;
    --muted-foreground: 24 5.4% 63.9%;

    --popover: 20 14.3% 4.1%;
    --popover-foreground: 60 9.1% 97.8%;

    --card: 20 14.3% 4.1%;
    --card-foreground: 60 9.1% 97.8%;

    --border: 12 6.5% 15.1%;
    --input: 12 6.5% 15.1%;

    --primary: 60 9.1% 97.8%;
    --primary-foreground: 24 9.8% 10%;

    --secondary: 12 6.5% 15.1%;
    --secondary-foreground: 60 9.1% 97.8%;

    --accent: 12 6.5% 15.1%;
    --accent-foreground: 60 9.1% 97.8%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 85.7% 97.3%;

    --ring: 12 6.5% 15.1%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground;
  }
}

button {
  user-select: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
}

@theme {
  --spacing-mk: calc(var(--spacing) * 3 * var(--spacing-ratio));
  --spacing-mk-2: calc(var(--spacing-mk) * 2);
  --spacing-mk-card-height: calc(var(--spacing-mk) * 4);
}

@utility mk-container {
  height: 100%;
  width: 100%;
  padding: var(--spacing-mk);
  padding-bottom: calc(var(--spacing) * 20);
}

@utility mk-card {
  cursor: pointer;
  padding: var(--spacing-mk);
  @media screen and (min-width: 768px) {
    padding: var(--spacing-mk);
    width: calc(var(--spacing) * 100);
  }
}

@utility mk-list {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-mk);
}

@utility mk-link {
  text-decoration: underline;
  text-underline-offset: 4px;
  transition: opacity 0.2s ease;
  cursor: pointer;

  &:hover {
    opacity: 0.6;
  }
}

@utility text-2xs {
  font-size: 10px;
}
@utility text-3xs {
  font-size: 8px;
}

